feat: K-Means Clustering

--- a/K-means Clustering/kmeans.ipynb
+++ b/K-means Clustering/kmeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,17 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'0': [(1.0, 1.4), (2.0, 1.3), (2.0, 6.4), (3.0, 6.1), (6.0, 3.2), (7.0, 3.5)], '1': [], '2': []}\n",
-      "[[10.5  10.95]\n",
-      " [10.5  10.95]\n",
-      " [10.5  10.95]]\n"
+     "ename": "NameError",
+     "evalue": "name 'random_centers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means Clustering/kmeans.ipynb 셀 5\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means%20Clustering/kmeans.ipynb#W4sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     points[\u001b[39mstr\u001b[39m(i)] \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means%20Clustering/kmeans.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m xi, yi \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(x, y):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means%20Clustering/kmeans.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     distances_from_center \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([euclidean_distance(xi, yi, xii, yii) \u001b[39mfor\u001b[39;00m xii, yii \u001b[39min\u001b[39;00m random_centers])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means%20Clustering/kmeans.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     t_index \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(distances_from_center)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yoonseonghyeon/Desktop/programming/python/python_AI/ml-study/K-means%20Clustering/kmeans.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     points[\u001b[39mstr\u001b[39m(t_index)]\u001b[39m.\u001b[39mappend((xi, yi))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'random_centers' is not defined"
      ]
     }
    ],
@@ -140,10 +141,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[array([6.]), array([3.2])], [array(1.), array(1.4)], [array(2.), array(6.4)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def euclidean_distance(x1, y1, x2, y2):\n",
+    "    return np.sqrt((x1 - x2)**2+(y1 - y2)**2)\n",
+    "\n",
+    "\n",
+    "### K Means ++\n",
+    "k = 3\n",
+    "\n",
+    "N = np.arange(len(x))\n",
+    "i = np.random.choice(N, 1)\n",
+    "\n",
+    "centers = []\n",
+    "t_center = [x[i], y[i]]\n",
+    "centers.append(t_center)\n",
+    "\n",
+    "for i in range(k-1):\n",
+    "    # distances_from_center = np.array([euclidean_distance(t_center[0], t_center[1], xii, yii) for xii, yii in zip(x, y)])\n",
+    "    # [euclidean_distance(xi,yi, xii, yii)  for (xi, yi), ( xii, yii) in zip(zip(x, y), [center for center in centers])]\n",
+    "\n",
+    "    distances_from_center = []\n",
+    "    for xi, yi in zip(x, y):\n",
+    "        d = 0\n",
+    "        for center in centers:\n",
+    "            d+=euclidean_distance(center[0], center[1], xi, yi)\n",
+    "\n",
+    "        distances_from_center.append(d)\n",
+    "\n",
+    "    t_index = np.argmax(distances_from_center)\n",
+    "\n",
+    "    far_point = [np.array(x[t_index]), np.array(y[t_index])]\n",
+    "    centers.append(far_point)\n",
+    "\n",
+    "print(centers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'0': [(6.0, 3.2), (7.0, 3.5)], '1': [(1.0, 1.4), (2.0, 1.3)], '2': [(2.0, 6.4), (3.0, 6.1)]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_epochs = 100\n",
+    "\n",
+    "for epoch in range(nb_epochs):\n",
+    "    points = {}\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        points[str(i)] = []\n",
+    "\n",
+    "    for xi, yi in zip(x, y):\n",
+    "        distances_from_center = np.array([euclidean_distance(xi, yi, xii, yii) for xii, yii in centers])\n",
+    "        t_index = np.argmin(distances_from_center)\n",
+    "\n",
+    "        points[str(t_index)].append((xi, yi))\n",
+    "\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        cluster_points = points[str(i)]\n",
+    "\n",
+    "        if (len(cluster_points) == 0):\n",
+    "            continue \n",
+    "\n",
+    "        new_center = np.sum(cluster_points, axis=0)/len(cluster_points[0])\n",
+    "\n",
+    "        # if (new_center == random_centers[i]).all():\n",
+    "            # print(\"finish!!\")\n",
+    "        # else:\n",
+    "        centers[i] = new_center\n",
+    "    \n",
+    "print(points)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 성공!!!!!!!!\n",
+    " \n",
+    "K-means Clustering 을 numpy를 이용하여 직접 구현해봤다. 오랜만에 재밌었다!"
+   ]
   }
  ],
  "metadata": {
